Update TypeScript to v2.7.1 and made chnages related to esModuleInterop

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -7,13 +7,15 @@
     ],
     "outDir": "../../bin/server",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "removeComments": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "moduleResolution": "node",
     "suppressImplicitAnyIndexErrors": true,
     "experimentalDecorators": true,
     "sourceMap": true,
